day 5 pt 2 plus day 6 complete

--- a/day 05/processing.ipynb
+++ b/day 05/processing.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,19 +150,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def combine_ranges(ranges: list[list[int]]) -> list[list[int]]:\n",
-    "    combined_ranges = []\n",
-    "    for [r_start, r_end] in ranges:\n",
+    "def combine_ranges(ranges: list[list[int]]) -> list[list[list[int]], bool]:\n",
+    "    sorted_ranges = sorted(ranges, key=lambda x: x[0])\n",
+    "    combined_ranges = sorted_ranges[:1]\n",
+    "    for [r_start, r_end] in sorted_ranges[1:]:\n",
     "        for index, [start, end] in enumerate(combined_ranges):\n",
-    "            if end>r_start>start or end>r_end>start:\n",
+    "            if end>=r_start>=start or end>=r_end>=start:\n",
     "                combined_ranges[index] = [min(start,r_start), max(end,r_end)]\n",
     "                break\n",
     "            if index == len(combined_ranges)-1:\n",
-    "                "
+    "                combined_ranges.append([r_start, r_end])\n",
+    "                break\n",
+    "    return combined_ranges\n",
+    "\n",
+    "def get_range_coverage(ranges: list[list[int]]) -> int:\n",
+    "    coverage = 0\n",
+    "    for [start, end] in ranges:\n",
+    "        coverage += end-start+1\n",
+    "    return coverage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total coverage of fresh products: 352509891817881\n"
+     ]
+    }
+   ],
+   "source": [
+    "ranges, _ = extract_ranges_and_items(input=input_data_pt2)\n",
+    "combined_ranges = combine_ranges(ranges=ranges)\n",
+    "print(f\"Total coverage of fresh products: {get_range_coverage(combined_ranges)}\")"
    ]
   },
   {
@@ -192,13 +220,6 @@
     "# deduped_range = set(fresh_range)\n",
     "# print(f\"Total number of fresh values: {len(deduped_range)}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
