--- a/day 07/processing.ipynb
+++ b/day 07/processing.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,29 +53,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def propagate_beam(grid: list[list[str]]) -> list[int, list[list[str]]]:\n",
+    "    n_splits = 0\n",
+    "    for y in range(len(grid)):\n",
+    "        for x in range(len(grid[y])):\n",
+    "            if grid[y][x] == \"S\":\n",
+    "                grid[y] = grid[y][:x]+\"|\"+grid[y][x+1:]\n",
+    "                break\n",
+    "            elif grid[y][x] == \"^\":\n",
+    "                if grid[y-1][x] == \"|\":\n",
+    "                    n_splits +=1\n",
+    "                    try:\n",
+    "                        if grid[y][x-1] != \"^\":\n",
+    "                            grid[y] = grid[y][:x-1]+\"|\"+grid[y][x:]\n",
+    "                    except IndexError:\n",
+    "                        continue\n",
+    "                    try:\n",
+    "                        if grid[y][x+1] != \"^\":\n",
+    "                            grid[y] = grid[y][:x+1]+\"|\"+grid[y][x+2:]\n",
+    "                    except IndexError:\n",
+    "                        continue\n",
+    "            else:\n",
+    "                try:\n",
+    "                    if grid[y-1][x] == \"|\":\n",
+    "                        grid[y] = grid[y][:x]+\"|\"+grid[y][x+1:]\n",
+    "                except IndexError:\n",
+    "                    continue\n",
+    "    return [n_splits, grid]\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "54331"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of times beams are split: 1628\n"
+     ]
     }
    ],
    "source": [
-    "\n"
+    "n_splits, _ = propagate_beam(grid=input_data_pt1)\n",
+    "print(f\"Number of times beams are split: {n_splits}\")\n"
    ]
   },
   {
@@ -111,11 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"./input_2.txt\"\n",
+    "filename = \"./input_1.txt\"\n",
     "\n",
     "with open(file=filename) as f:\n",
     "    input_data_pt2 = f.read().splitlines()"
@@ -131,28 +157,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def propagate_beams(grid: list[list[str]]) -> list[int, list[list[str]], int, list[list[int]]]:\n",
+    "    beams = [[0 for _ in range(len(grid[0]))] for _ in range(len(grid))]\n",
+    "    n_splits = 0\n",
+    "    for y in range(len(grid)):\n",
+    "        for x in range(len(grid[y])):\n",
+    "            if grid[y][x] == \"S\":\n",
+    "                grid[y] = grid[y][:x]+\"|\"+grid[y][x+1:]\n",
+    "                beams[y][x] = 1\n",
+    "                break\n",
+    "            elif grid[y][x] == \"^\":\n",
+    "                if grid[y-1][x] == \"|\":\n",
+    "                    n_splits +=1\n",
+    "                    try:\n",
+    "                        if grid[y][x-1] != \"^\":\n",
+    "                            grid[y] = grid[y][:x-1]+\"|\"+grid[y][x:]\n",
+    "                            beams[y][x-1] += beams[y-1][x]\n",
+    "                    except IndexError:\n",
+    "                        print(\"left alignment failure\")\n",
+    "                        continue\n",
+    "                    try:\n",
+    "                        if grid[y][x+1] != \"^\":\n",
+    "                            grid[y] = grid[y][:x+1]+\"|\"+grid[y][x+2:]\n",
+    "                            beams[y][x+1] += beams[y-1][x]\n",
+    "                    except IndexError:\n",
+    "                        print(\"right alignment failure\")\n",
+    "                        continue\n",
+    "            else:\n",
+    "                try:\n",
+    "                    if grid[y-1][x] == \"|\":\n",
+    "                        grid[y] = grid[y][:x]+\"|\"+grid[y][x+1:]\n",
+    "                        beams[y][x] += beams[y-1][x]\n",
+    "                except IndexError:\n",
+    "                    continue\n",
+    "    return [n_splits, grid, sum(beams[-1]), beams]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "54518"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total instances of beams reaching the end: 27055852018812\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "_, _, beam_count, beams = propagate_beams(grid=input_data_pt2)\n",
+    "print(f\"Total instances of beams reaching the end: {beam_count}\")\n",
+    "# print(f\"Overview of number of beams per position: {beams}\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -178,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
