remove unused outputs, day 9 pt 1

--- a/day 09/processing.ipynb
+++ b/day 09/processing.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,29 +53,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_area(positions: list[int]) -> list[float, int, int]:\n",
+    "    areas = []\n",
+    "    for one, c1 in enumerate(positions[:-1]):\n",
+    "        for two, c2 in enumerate(positions[one+1:]):\n",
+    "            areas.append(\n",
+    "                [\n",
+    "                    (abs(c1[0]-c2[0])+1)*(abs(c1[1]-c2[1])+1),\n",
+    "                    one,\n",
+    "                    one+two+1\n",
+    "                ]\n",
+    "            )\n",
+    "    return sorted(areas, key=lambda x: x[0], reverse=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "54331"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Largest area found is 4749838800 between tiles 59 and 305\n"
+     ]
     }
    ],
    "source": [
-    "\n"
+    "tile_positions = [[int(x) for x in line.split(\",\")] for line in input_data_pt1]\n",
+    "sorted_areas=get_area(positions=tile_positions)\n",
+    "print(f\"Largest area found is {sorted_areas[0][0]} between tiles {sorted_areas[0][1]} and {sorted_areas[0][2]}\")"
    ]
   },
   {
@@ -178,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
